# Retrosorter

./: .gitignore  CMakeLists.txt  Intefaz_training.py  Inv_proj1.cbproj  README.md  Unit1.cpp  Unit1.dfm  Unit1.h  Unit2.cpp  Unit2.dfm  Unit2.h  database_handler.py  image_handler.py  interfaz_program.py  lib.h  main.cpp  main.py  neuron_handler.py  normalizacion.py  perceptron.cpp  read_images.h  train_path.txt  training.cpp  training.py  window.h
__recovery/: Unit1.cpp  Unit1.h
database/: Base1.txt
thresholds/: Camera.txt  gameboy.txt  gamecube.txt  ps1.txt  ps2.txt
weights/: weight_data_Camera.txt  weight_data_gameboy.txt  weight_data_gamecube.txt  weight_data_ps1.txt  weight_data_ps2.txt
